fix mobile screenshot overlap

--- a/staticfiles/developer/css/style.css
+++ b/staticfiles/developer/css/style.css
@@ -37,6 +37,10 @@ section {
   max-width: 100%;
 }
 
+.project-title {
+  margin-top: 22px;
+}
+
 @media (min-width: 768px) {
 .projects-arrows {
   width: 40px;
@@ -57,6 +61,10 @@ section {
 
 #jumbosub {
   font-size: 48px!important;
+}
+
+.mobile-screenshot {
+  top: 10%!important;
 }
 }
 
@@ -100,7 +108,7 @@ color: #4f4d4d;
 .mobile-screenshot {
   width: 50%;
   position: absolute;
-  top: 10%;
+  top: 5%;
   right: -9%;
 }
 
